--- a/css/ecobici.css
+++ b/css/ecobici.css
@@ -2,30 +2,47 @@
 body{
 	padding: 20px;
 }
+#contenedor{
+	width: 100%;
+	height: 100%;
+}
+
+#left, #right {
+	float: left;
+	width: 50%;
+	height: 100%;
+	overflow: hidden;
+}
+
+#infoestacion{
+	height: 50%;
+	width: 100%;
+	background-color: red;
+}
+
+#agregado{
+	height: 50%;
+	width: 100%;
+	background-color: blue;
+}
+
+#map{
+	width: 100%;
+	height: 100%;
+}
+
 #map svg{
 		border:5px solid #ccc;
 	}
-
-.prueba {stroke:rgb(254,240,217)}
 
 .barrios {
 	fill: #ecf0f1;
 	stroke: none;
 	}
 
-.estaciones{
-	fill: #2980b9;
-	stroke: #333;
-}
-
 .calles{
 	fill: none;
 	stroke: #7f8c8d;
-}
-
-.lineas{
-	fill: #333;
-	stroke: #333;
 }
 
 .tip{
@@ -42,4 +59,15 @@ body{
 
 .oculto {
 	stroke-width: 0;
+}
+
+.area {
+  fill: steelblue;
+}
+
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
 }
