--- a/css/ecobici.css
+++ b/css/ecobici.css
@@ -71,3 +71,9 @@ body{
   stroke: #000;
   shape-rendering: crispEdges;
 }
+
+.nombreestacion text{
+	fill: rgba(0,0,0,0.3);
+	text-anchor: end;
+	font-family: 'Raleway',sans-serif; font-size: 30px; font-weight: 800; line-height: 72px; margin: 0 0 24px; text-align: center; text-transform: uppercase;
+}
